--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         </select>
         <select class="month" name="month">
           <option disabled selected>Month</option>
-          <option selected value='1'>Janaury</option>
+          <option selected value='1'>January</option>
           <option value='2'>February</option>
           <option value='3'>March</option>
           <option value='4'>April</option>
@@ -58,7 +58,7 @@
           <option value='11'>November</option>
           <option value='12'>December</option>
         </select>
-        <select name="birth-year">
+        <select class="year" name="year">
           <option disabled selected>Year</option>
           <option value="2018">2018</option>
           <option value="2017">2017</option>
@@ -186,7 +186,16 @@
           <option value="somewhatUnhealthy">Somewhat Unhealthy</option>
           <option value="veryUnhealthy">Very Unhealthy</option>
         </select>
+        <button type="submit" name="button">Submit</button>
       </form>
+    </div>
+    <div class="outputArea">
+      <h3>Your Results:</h3>
+      <p class=""><span></span></p>
+      <p class=""><span></span></p>
+      <p class=""><span></span></p>
+      <p class=""><span></span></p>
+      <p class=""><span></span></p>
     </div>
   </body>
 </html>
